2013-12-16  Eli Zaretskii  <eliz@gnu.org>

	* xdisp.c (Fmove_point_visually): Fix subtle bugs in the fallback
	code, revealed in presence of R2L characters, character
	compositions, and display vectors.  A better fix for Bug#16148.

	* dispextern.h (struct composition_it): Correct a comment for the
	'width' member.

2013-12-16  Paul Eggert  <eggert@cs.ucla.edu>

	* font.h (valid_font_driver) [!ENABLE_CHECKING]: Define a dummy.
	This prevents a compilation error on C compilers that do not
	default functions to return 'int' if not declared.  Also, add
	INLINE_HEADER_BEGIN and INLINE_HEADER_END to this include file,
	since it now uses inline functions.

2013-12-16  Eli Zaretskii  <eliz@gnu.org>

	* xdisp.c (extend_face_to_end_of_line): Don't fill background of
	display margins on mode line, header line, and in the frame's
	tool-bar window.  (Bug#16165)

2013-12-16  Andreas Schwab  <schwab@suse.de>

	* gnutls.c (Fgnutls_boot): Properly check Flistp return value.

2013-12-16  Teodor Zlatanov  <tzz@lifelogs.com>

	* gnutls.c (Fgnutls_boot): Use `Flistp' instead of
	`CHECK_LIST_CONS`.

2013-12-16  Martin Rudalics  <rudalics@gmx.at>

	* w32term.c (w32_enable_frame_resize_hack): Default to 1.

2013-12-16  Dmitry Antipov  <dmantipov@yandex.ru>

	* font.c (valid_font_driver) [ENABLE_CHECKING]: New function
	intended to find bogus pointers in font objects (Bug#16140).
	* font.h (valid_font_driver) [ENABLE_CHECKING]: Add prototype.
	* alloc.c (cleanup_vector): Use valid_font_driver in eassert.
	(compact_font_cache_entry, compact_font_caches) [!HAVE_NTGUI]:
	Disable for MS-Windows due to Bug#15876; apparently this
	requires more or less substantial changes in fontset code.
	* xfont.c (xfont_close):
	* xftfont.c (xftfont_close): Call x_display_info_for_display
	to check whether 'Display *' is valid (Bug#16093 and probably
	Bug#16069).

2013-12-15  Eli Zaretskii  <eliz@gnu.org>

	* fileio.c (Fexpand_file_name) [WINDOWSNT]: Fix conditionals.